adding Welcome Message and Priests Modules
